--- a/endolifeFit/src/main/res/layout/custom_marker_view.xml
+++ b/endolifeFit/src/main/res/layout/custom_marker_view.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="40dp"
-    android:background="@android:color/darker_gray" >
+    android:background="@drawable/marker_background" >
 
     <TextView
         android:id="@+id/tvContent"
